# rye-fastapi-sample

./: README.md  pyproject.toml
src/rye_fastapi_sample/: __init__.py  main.py
