[project]
name = "rye-fastapi-sample"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "masayasekine", email = "negirider250@gmail.com" }
]
dependencies = [
    "fastapi>=0.109.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
